MICS-10721 fix blurry text on canvas
improve text drawing using devicePixelRatio

--- a/app/react/src/styles/common/funnel.less
+++ b/app/react/src/styles/common/funnel.less
@@ -63,11 +63,11 @@
 
 .mcs-funnel_arrow--failed {
   &:before {
-    background-color: #f8939b;
+    background-color: #fc3f48;
   }
 
   &:after {
-    border-bottom-color: #f8939b;
+    border-bottom-color: #fc3f48;
   }
 }
 
@@ -507,8 +507,8 @@
 }
 
 .mcs-funnel_canvas {
-  height: 370px;
   margin-top: 126px;
+  image-rendering: pixelated;
 }
 
 .mcs-funnelStepHover_totalsByDimension {
